--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       
         <div class="language-container">
             <div>
-                <label for="sourceLanguage">Source Language:</label>
+                <label for="sourceLanguage">Source Language</label>
                 <select id="sourceLanguage" placeholder="Select source language"></select>
             </div>
             
